--- a/docs/_releases/v4.5.10.md
+++ b/docs/_releases/v4.5.10.md
@@ -696,7 +696,7 @@ The parsing implementations of primitive .NET Types like integers, decimal and G
  
 [Jonathan Birch](https://www.linkedin.com/in/jonathan-birch-ab27681) from Microsoft Vulnerability Research Team (MSVR) notified us of a potential vulnerability when using `object` properties on DTOs as it allows crafting a JSON payload that can create instances of arbitrary Types and setting their public properties and there exists Types in the .NET Base Class library where this feature can have unwanted consequences. 
  
-We've [strongly recommended against usage of object and interface properties](https://stackoverflow.com/a/10759250/85785) on DTOS which is contra to the goals of designing self-describing APIs where they expose an unknown hole in Service contracts that's a potential source of runtime serialization issues, requires proprietary extensions to serialization formats and adds coupling to specific serializer implementations, embeds brittle .NET namespaces in DTOs and fails to serialize in many standards based serializers and as a result [won't work in some alternative languages](/swift-add-servicestack-reference#swift-native-types-limitations). 
+We've [strongly recommended against usage of object and interface properties](https://stackoverflow.com/a/10759250/85785) on DTOS which is contra to the goals of designing self-describing APIs where they expose an unknown hole in Service contracts that's a potential source of runtime serialization issues, requires proprietary extensions to serialization formats, embeds brittle .NET namespaces in DTOs and adds coupling to serializer-specific implementations that will fail to deserialize in many standards based serializers which as a result [won't work in some alternative languages](/swift-add-servicestack-reference#swift-native-types-limitations). 
  
 Despite its shortcomings it's still a used feature that we still need to support but in order to close this vulnerability we had to switch to use a whitelist to limit which Types are allowed to deserialize in late-bound `object` properties. 
  
