--- a/docs/_releases/v4.5.10.md
+++ b/docs/_releases/v4.5.10.md
@@ -496,7 +496,7 @@ We've also migrated all source projects for all of [ServiceStack's NuGet package
  
 ### Breaking Change
  
-The only package we couldn't bring across into VS2017's new MSBuild format was [ServiceStack.OrmLite.Sqlite.Mono](https://www.nuget.org/packages/ServiceStack.OrmLite.Sqlite.Mono) which referenced the native `sqlite3.dll` directly. This has been replaced with the new [ServiceStack.OrmLite.Sqlite](https://www.nuget.org/packages/ServiceStack.OrmLite.Sqlite) .NET 4.5 NuGet package that can be installed with:
+The only package we couldn't bring across into VS2017's new MSBuild format was [ServiceStack.OrmLite.Sqlite.Mono](https://www.nuget.org/packages/ServiceStack.OrmLite.Sqlite.Mono) which referenced the native `sqlite3.dll` directly. This has been replaced with the new [ServiceStack.OrmLite.Sqlite](https://www.nuget.org/packages/ServiceStack.OrmLite.Sqlite) NuGet package which replaces both **Sqlite.Mono** and **Sqlite.Windows** packages and can be installed with:
  
     PM> Install-Package ServiceStack.OrmLite.Sqlite
  
@@ -919,15 +919,15 @@ The example configuration below registers multiple proxies which proxies all req
 ```csharp
 Plugins.Add(new ProxyFeature(
     matchingRequests: req => req.PathInfo.StartsWith("/techstacks"),
-    resolveUrl: req => $"http://${resolve(req)}.techstacks.io" + req.RawUrl.Replace("/techstacks", "/")));
+    resolveUrl:req => $"http://${resolve(req)}.techstacks.io" + req.RawUrl.Replace("/techstacks","/")));
  
 Plugins.Add(new ProxyFeature(
     matchingRequests: req => req.PathInfo.StartsWith("/marketing"),
-    resolveUrl: req => "http://marketing.domain.com" + req.RawUrl.Replace("/marketing", "/")));
+    resolveUrl:req => "http://marketing.domain.com" + req.RawUrl.Replace("/marketing", "/")));
  
 Plugins.Add(new ProxyFeature(
     matchingRequests: req => req.PathInfo.StartsWith("/finance"),
-    resolveUrl: req => "http://finance.domain.com" + req.RawUrl.Replace("/finance", "/")));
+    resolveUrl:req => "http://finance.domain.com" + req.RawUrl.Replace("/finance", "/")));
 ```
  
 Just like a normal HTTP Proxy, `ProxyFeature` forwards all the HTTP Request Headers and returns all the HTTP Response Headers and body of the downstream server inc. HTTP Error Responses. This works especially well with ServiceStack's message-based design as the proxied endpoint e.g `/techstacks` can be treated as if it were the **BaseUrl** for the downstream server which allows external clients to treat it like they're communicating with the downstream server directly despite every request being transparently proxied behind a central external ServiceStack instance.
@@ -990,7 +990,7 @@ So you could use the `TransformResponse` delegate for instance to rewrite any in
 ```csharp
 Plugins.Add(new ProxyFeature(
     matchingRequests: req => req.PathInfo.StartsWith("/techstacks"),
-    resolveUrl: req => $"http://${resolve(req)}.techstacks.io" + req.RawUrl.Replace("/techstacks", "/"))
+    resolveUrl: req => $"http://${resolve(req)}.techstacks.io" + req.RawUrl.Replace("/techstacks","/"))
     {
         TransformResponse = async (res, responseStream) => 
         {
