--- a/docs/_releases/v4.5.10.md
+++ b/docs/_releases/v4.5.10.md
@@ -700,7 +700,7 @@ We've [strongly recommended against usage of object and interface properties](ht
  
 Despite its shortcomings it's still a used feature that we still need to support but in order to close this vulnerability we had to switch to use a whitelist to limit which Types are allowed to deserialize in late-bound `object` properties. 
  
-To minimize the runtime Exceptions resulting from adopting a whitelist we've pre-populated it with a safe-list popular Data Types, DTOs and Request DTOs with the default configuration below:
+To minimize the runtime Exceptions resulting from adopting a whitelist we've pre-populated it with a safe-list of popular Data Types, DTOs and Request DTOs with the default configuration below:
  
 ```csharp
 // Allow deserializing types with [DataContract] or [RuntimeSerializable] attributes
@@ -740,13 +740,13 @@ If you're in a trusted intranet environment this can also be used to disable the
 JsConfig.AllowRuntimeType = _ => true;
 ```
  
-Note: This vulnerability also applies if you've manually implemented a similar feature that uses a `string` or `Type` property to specify which instance to create, in which case you'll want to implement a similar solution. Although the recommendation to avoid this vulnerability would be to not use late-bound `object` properties and to instead revert to using Typed properties.
+Note: This vulnerability also applies if you've manually implemented a similar feature that uses a `string` or `Type` property to specify which instance to create, in which case you'll want to implement a similar solution. Although the recommendation to avoid this vulnerability would be to not use late-bound `object` properties and to revert to using Typed properties instead.
  
 ### Fast Reflection APIs
  
-Most of ServiceStack's libraries relies on the high-performance reusable utilities in ServiceStack.Text to power many of its features. Previously many of our compiled delegates were maintained across different classes, often with duplicated functionality. In this release we've consolidated this functionality behind a formal API which includes multiple cascading implementations so it's able to use the fastest implementation available in [each supported platform](https://github.com/ServiceStackApps/HelloMobile#portable-class-library-support), i.e. for most .NET platforms we use the Reflection.Emit implementations when possible, when not available it falls back to using Compiled Expression trees, then finally falling back to using a Reflection-based implementation. 
+Most of ServiceStack's libraries relies on the high-performance reusable utilities in ServiceStack.Text to power many of its features. Previously many of our compiled delegates were maintained across multiple different classes, often with duplicated functionality. In this release we've consolidated this functionality behind a formal API which includes multiple cascading implementations so it's able to use the fastest implementation available in [each supported platform](https://github.com/ServiceStackApps/HelloMobile#portable-class-library-support), i.e. for most .NET platforms we use the Reflection.Emit implementations when possible, when not available it falls back to using Compiled Expression trees, then finally falling back to using a Reflection-based implementation. 
  
-This functionality is available using the `CreateGetter()` and `CreateSetter()` extension methods on both `PropertyInfo` or `FieldInfo` which you may find useful if you want better performance when needing to populate runtime types dynamically.
+This functionality is available using the `CreateGetter()` and `CreateSetter()` extension methods on both `PropertyInfo` or `FieldInfo` which you may find useful if you'd like to get better performance when populating runtime types dynamically.
  
 The API examples below showcases the different APIs available:
  
