--- a/docs/_releases/v4.5.10.md
+++ b/docs/_releases/v4.5.10.md
@@ -919,15 +919,15 @@ The example configuration below registers multiple proxies which proxies all req
 ```csharp
 Plugins.Add(new ProxyFeature(
     matchingRequests: req => req.PathInfo.StartsWith("/techstacks"),
-    resolveUrl:req => $"http://${resolve(req)}.techstacks.io" + req.RawUrl.Replace("/techstacks","/")));
+    resolveUrl:req => $"http://${resolve(req)}.techstacks.io" + req.RawUrl.Replace("/techstacks","/")))
  
 Plugins.Add(new ProxyFeature(
     matchingRequests: req => req.PathInfo.StartsWith("/marketing"),
-    resolveUrl:req => "http://marketing.domain.com" + req.RawUrl.Replace("/marketing", "/")));
+    resolveUrl:req => "http://marketing.domain.com" + req.RawUrl.Replace("/marketing", "/")))
  
 Plugins.Add(new ProxyFeature(
     matchingRequests: req => req.PathInfo.StartsWith("/finance"),
-    resolveUrl:req => "http://finance.domain.com" + req.RawUrl.Replace("/finance", "/")));
+    resolveUrl:req => "http://finance.domain.com" + req.RawUrl.Replace("/finance", "/")))
 ```
  
 Just like a normal HTTP Proxy, `ProxyFeature` forwards all the HTTP Request Headers and returns all the HTTP Response Headers and body of the downstream server inc. HTTP Error Responses. This works especially well with ServiceStack's message-based design as the proxied endpoint e.g `/techstacks` can be treated as if it were the **BaseUrl** for the downstream server which allows external clients to treat it like they're communicating with the downstream server directly despite every request being transparently proxied behind a central external ServiceStack instance.
