rel-notes fixes

--- a/docs/_releases/v4.5.10.md
+++ b/docs/_releases/v4.5.10.md
@@ -500,7 +500,7 @@ A nice benefit from migrating to the new templates is that our source folders re
  
 [![](https://raw.githubusercontent.com/ServiceStack/Assets/master/img/livedemos/gistlyn/home-screenshot.png)](https://github.com/ServiceStack/Gistlyn)
  
-> The React Desktop Templates aren't configured to use cache-breaker hashes in their production output file names so the Embedded Resources project used by the different Desktop App projects retain a predictable name for each asset.
+> The React Desktop Templates aren't configured to use cache-breaker hashes in their production output file names so the Embedded Resources project used by the different Desktop App projects retain predictable names for each asset.
  
 ## Full support for VS 2017
  
@@ -803,7 +803,7 @@ var instance = runtimeType.CreateInstance();
 var typeProps = TypeProperties.Get(runtimeType); //Equivalent to:
 //  typeProps = TypeProperties<MyType>.Instance;
  
-var idAccessor = TypeProperties.GetAccessor("Id");
+var idAccessor = typeProps.GetAccessor("Id");
 propAccessor.PublicSetter(instance, 1);
 var idValue = propAccessor.PublicGetter(instance);
 ```
@@ -1107,7 +1107,7 @@ class TypedRequestFilter : ITypedFilter<MyRequest>
 {
     public IDependency Dependency { get; set; } // injected by IOC
  
-    public void Invoke(IRequest req, IResponse res, RequestDto dto) 
+    public void Invoke(IRequest req, IResponse res, MyRequest dto) 
     {
         // Handle MyRequest using a Request Filter
         if (!Dependency.GrantAccess(dto, req))
