--- a/docs/_releases/v4.5.10.md
+++ b/docs/_releases/v4.5.10.md
@@ -504,9 +504,7 @@ A nice benefit from migrating to the new templates is that our source folders re
  
 ## Full support for VS 2017
  
-We've added complete support for VS.NET 2017 with the [ServiceStackVS](https://github.com/ServiceStack/ServiceStackVS) VS.NET Extension now available for VS.NET 2017. 
- 
-We've also migrated all source projects for all of [ServiceStack's NuGet packages](https://www.nuget.org/profiles/servicestack) to VS2017's new MSBuild format which is now being used to generate the different .NET 4.5 and .NET Standard platform builds used in all .NET Core packages including our multi-target Test projects.
+We've added complete support for VS.NET 2017 with the [ServiceStackVS](https://github.com/ServiceStack/ServiceStackVS) VS.NET Extension and have migrated all ServiceStack code-bases for all of [ServiceStack's NuGet packages](https://www.nuget.org/profiles/servicestack) to VS2017's new MSBuild format which is now being used to generate the different .NET 4.5 and .NET Standard platform builds used in all .NET Core packages including our multi-target Test projects.
  
 ### Breaking Change
  
