fix broken lnks

--- a/docs/_releases/v4.5.10.md
+++ b/docs/_releases/v4.5.10.md
@@ -19,7 +19,7 @@ Our existing Angular, Aurelia, React and React Desktop Single Page App templates
  
 [![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/ssvs/webpack-overview.png)](https://webpack.js.org)
  
-Webpack replaces JSPM and now takes care of all packaging and bundling requirements which prior templates used Gulp tasks and JSPM to accomplish. Gulp is still used, primarily to provide a GUI to run the [templates npm scripts](https://github.com/ServiceStack/Templates/blob/a3cd91057526441ffe7b304df8431aea707edcee/src/SinglePageApps/ReactApp1/ReactApp1/package.json#L5-L12) in VS.NET's Task Runner Explorer so all templates features can be accessed without leaving VS.NET, or if preferred each npm script can also be run on the command-line with:
+Webpack replaces JSPM and now takes care of all packaging and bundling requirements which prior templates used Gulp tasks and JSPM to accomplish. Gulp is still used, primarily to provide a GUI to run the [templates npm scripts](https://github.com/ServiceStack/Templates/blob/9e5bd421decffda43fcc46f4cf112b3999888e53/src/SinglePageApps/ReactApp/ReactApp/package.json#L5-L13) in VS.NET's Task Runner Explorer so all templates features can be accessed without leaving VS.NET, or if preferred each npm script can also be run on the command-line with:
  
     $ npm run {script name}
  
@@ -42,7 +42,7 @@ Webpack has been pre-configured in all Single Page App templates to enable a fle
  
 Although as Webpack is the central hub powering each template you'll still want to become familiar with its [four high-level concepts](https://webpack.js.org/concepts/) to understand how it's new approach to Single Page App development works and how it can handle all your App's dependencies and resources.
  
-We'll quickly touch on each of Webpack's concepts by seeing how the React App's [webpack.config.js](https://github.com/ServiceStack/Templates/blob/master/src/SinglePageApps/ReactApp1/ReactApp1/webpack.config.js) is configured to handle its TypeScript sources, sass/css files and their references.
+We'll quickly touch on each of Webpack's concepts by seeing how the React App's [webpack.config.js](https://github.com/ServiceStack/Templates/blob/master/src/SinglePageApps/ReactApp/ReactApp/webpack.config.js) is configured to handle its TypeScript sources, sass/css files and their references.
  
 ### [Entry points](https://webpack.js.org/concepts/entry-points/)
  
@@ -77,15 +77,15 @@ output: {
 },
 ```
  
-Here we can see that our Webpack config supports multiple [isProd and isDev](https://github.com/ServiceStack/Templates/blob/master/src/SinglePageApps/ReactApp1/ReactApp1/webpack.config.js#L22-L23) configurations, `isDev` is used for development builds where Webpack bundles our website in the `/dist` folder whilst `isProd` is used for production builds which is instead bundled in the `/wwwroot/dist` folder with each `.js` bundle including a **[chunkhash]** cache-breaker in its filename. 
+Here we can see that our Webpack config supports multiple [isProd and isDev](https://github.com/ServiceStack/Templates/blob/9e5bd421decffda43fcc46f4cf112b3999888e53/src/SinglePageApps/ReactApp/ReactApp/webpack.config.js#L22-L23) configurations, `isDev` is used for development builds where Webpack bundles our website in the `/dist` folder whilst `isProd` is used for production builds which is instead bundled in the `/wwwroot/dist` folder with each `.js` bundle including a **[chunkhash]** cache-breaker in its filename. 
  
-> The `root()` and `when()` functions used are basic [helpers used to simplify webpack configuration](https://github.com/ServiceStack/Templates/blob/master/src/SinglePageApps/ReactApp1/ReactApp1/webpack.config.js#L159-L174)
+> The `root()` and `when()` functions used are basic [helpers used to simplify webpack configuration](https://github.com/ServiceStack/Templates/blob/master/src/SinglePageApps/ReactApp/ReactApp/webpack.config.js#L159-L174)
  
 ### [Loaders](https://webpack.js.org/concepts/loaders/)
  
 Loaders are the flexible engine that sets Webpack apart where it's able to leverage its [vast ecosystem](https://webpack.github.io/docs/list-of-loaders.html) where there's a loader for every kind of web asset typically used when developing Web Apps. 
  
-Loaders are configured in the `rules` section and invoked using node's `require()` statement or ES6/TypeScript's `import` statement. Rules use the `test` regex to specify which files they should apply to whilst the `loader` property tells Webpack which loader to load them with. Each loader is self-contained in a separate npm package that needs to be made available to your project by adding them to your [package.json devDependencies](https://github.com/ServiceStack/Templates/blob/a64897e8b20318ef4c00558fa9ccb5e1e0a157ee/src/SinglePageApps/ReactApp1/ReactApp1/package.json#L42). 
+Loaders are configured in the `rules` section and invoked using node's `require()` statement or ES6/TypeScript's `import` statement. Rules use the `test` regex to specify which files they should apply to whilst the `loader` property tells Webpack which loader to load them with. Each loader is self-contained in a separate npm package that needs to be made available to your project by adding them to your [package.json devDependencies](https://github.com/ServiceStack/Templates/blob/9e5bd421decffda43fcc46f4cf112b3999888e53/src/SinglePageApps/ReactApp/ReactApp/package.json#L43). 
  
 Lets checkout React's loader configuration for a typical example:
  
@@ -193,7 +193,7 @@ Loaders only loads and transforms files on a **per-file** basis, anything more a
  1. Set type of Webpack build so other loaders/plugins can optimize accordingly
  2. Deletes the output folder
  3. Exports common dependencies into a **vendor** `bundle.js`
- 4. Generate the WebApps `index.html`, based on [index.template.ejs](https://github.com/ServiceStack/Templates/blob/master/src/SinglePageApps/ReactApp1/ReactApp1/index.template.ejs) and compiled with [lodash template](https://lodash.com/docs/4.17.4#template), which also takes care of injecting any `.css` and `.js` output bundle references
+ 4. Generate the WebApps `index.html`, based on [index.template.ejs](https://github.com/ServiceStack/Templates/blob/master/src/SinglePageApps/ReactApp/ReactApp/index.template.ejs) and compiled with [lodash template](https://lodash.com/docs/4.17.4#template), which also takes care of injecting any `.css` and `.js` output bundle references
   
 ```js
 plugins: [
@@ -220,13 +220,13 @@ plugins: [
 ]
 ```
  
-In production builds, `.css` files are written using [ExtractTextPlugin](https://github.com/webpack-contrib/extract-text-webpack-plugin) and the resulting `.js` files minified with UglifyJS. The [CopyWebpackPlugin](https://github.com/kevlened/copy-webpack-plugin) is then used to copy the [.NET Web Apps Server assets and binaries](https://github.com/ServiceStack/Templates/blob/a3cd91057526441ffe7b304df8431aea707edcee/src/SinglePageApps/ReactApp1/ReactApp1/webpack.config.js#L3-L14), completing the full production build of the WebApp in `/wwwroot` that's all ready to be deployed to any [MS WebDeploy](https://www.iis.net/downloads/microsoft/web-deploy) enabled Server using the `03-deploy-app` Gulp task.
+In production builds, `.css` files are written using [ExtractTextPlugin](https://github.com/webpack-contrib/extract-text-webpack-plugin) and the resulting `.js` files minified with UglifyJS. The [CopyWebpackPlugin](https://github.com/kevlened/copy-webpack-plugin) is then used to copy the [.NET Web Apps Server assets and binaries](https://github.com/ServiceStack/Templates/blob/9e5bd421decffda43fcc46f4cf112b3999888e53/src/SinglePageApps/ReactApp/ReactApp/webpack.config.js#L3-L14), completing the full production build of the WebApp in `/wwwroot` that's all ready to be deployed to any [MS WebDeploy](https://www.iis.net/downloads/microsoft/web-deploy) enabled Server using the `03-deploy-app` Gulp task.
  
 ### Loading Dependencies
  
 Now that we've covered how Webpack is configured, the next step is showing how to make use of it, by loading your App's resources using node's `require()` or TypeScript's `import` statement. 
 
-This can be seen in the App's [app.tsx](https://github.com/ServiceStack/Templates/blob/master/src/SinglePageApps/ReactApp1/ReactApp1/src/app.tsx) starting point where it imports **bootstrap.css** and **font-awesome.css** directly from the installed **bootstrap** and **font-awesome** npm packages as well as a local [./app.scss](https://github.com/ServiceStack/Templates/blob/master/src/SinglePageApps/ReactApp1/ReactApp1/src/app.scss) SASS file which lives side-by-side next to TypeScript source files:
+This can be seen in the App's [app.tsx](https://github.com/ServiceStack/Templates/blob/master/src/SinglePageApps/ReactApp/ReactApp/src/app.tsx) starting point where it imports **bootstrap.css** and **font-awesome.css** directly from the installed **bootstrap** and **font-awesome** npm packages as well as a local [./app.scss](https://github.com/ServiceStack/Templates/blob/master/src/SinglePageApps/ReactApp/ReactApp/src/app.scss) SASS file which lives side-by-side next to TypeScript source files:
  
 ```ts
 import 'bootstrap/dist/css/bootstrap.css';
@@ -261,13 +261,13 @@ In production builds the `file-loader` copies their references to the output fol
 },
 ```
 
-`require()` can also be used to load resources in other files which is how images can be imported in the [index.template.ejs](https://github.com/ServiceStack/Templates/blob/9ae9d07690cd92d4666a3c749fefbe849918ca56/src/SinglePageApps/Angular4App1/Angular4App1/index.template.ejs) home page template:
+`require()` can also be used to load resources in other files which is how images can be imported in the [index.template.ejs](https://github.com/ServiceStack/Templates/blob/master/src/SinglePageApps/Angular4App/Angular4App/index.template.ejs) home page template:
  
 ```html
 <link rel="shortcut icon" href="<%=require('./src/assets/img/favicon.png')%>">
 ```
  
-Or inside [App components](https://github.com/ServiceStack/Templates/blob/9ae9d07690cd92d4666a3c749fefbe849918ca56/src/SinglePageApps/Angular4App1/Angular4App1/src/app.component.ts#L32), both of which returns the image url after it has been processed by Webpack's loaders, e.g:
+Or inside [App components](https://github.com/ServiceStack/Templates/blob/9e5bd421decffda43fcc46f4cf112b3999888e53/src/SinglePageApps/Angular4App/Angular4App/src/app.component.ts#L32), both of which returns the image url after it has been processed by Webpack's loaders, e.g:
  
 ```csharp
 constructor() {
@@ -287,7 +287,7 @@ You'll use development builds when developing your app locally which you can run
  
     $ npm run build
  
-This will generate your App in the [/dist](https://github.com/ServiceStack/Templates/tree/master/src/SinglePageApps/ReactApp1/ReactApp1/dist) folder similar to:
+This will generate your App in the [/dist](https://github.com/ServiceStack/Templates/tree/master/src/SinglePageApps/ReactApp/ReactApp/dist) folder similar to:
  
     /dist
         /img
@@ -308,7 +308,7 @@ When your App is ready to deploy you can run a production build using the `webpa
  
     $ npm run build-prod
  
-This will bundle and generate your WebApp in the [/wwwroot/dist](https://github.com/ServiceStack/Templates/tree/master/src/SinglePageApps/ReactApp1/ReactApp1/wwwroot/dist) folder with css and source maps extracted and written into separate files, css and js minified and all assets emitted with cache-breaking hashes, similar to:
+This will bundle and generate your WebApp in the **/wwwroot/dist** folder with css and source maps extracted and written into separate files, css and js minified and all assets emitted with cache-breaking hashes, similar to:
  
     /wwwroot
         /dist
@@ -376,7 +376,7 @@ Whilst CSS is a powerful language for styling Web Apps it lacks many of the DRY 
  
 ![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/ssvs/servicestack-ts.png)
  
-ServiceStack is seamlessly [integrated with TypeScript](/typescript-add-servicestack-reference) where all templates are pre-configured to use the Server's TypeScript DTOs and [servicestack-client](https://github.com/ServiceStack/servicestack-client) generic `JsonServiceClient` to make the [Typed API request below](https://github.com/ServiceStack/Templates/blob/master/src/SinglePageApps/ReactApp1/ReactApp1/src/home/Hello.tsx) which displays a Welcome message on each key-press:
+ServiceStack is seamlessly [integrated with TypeScript](/typescript-add-servicestack-reference) where all templates are pre-configured to use the Server's TypeScript DTOs and [servicestack-client](https://github.com/ServiceStack/servicestack-client) generic `JsonServiceClient` to make the [Typed API request below](https://github.com/ServiceStack/Templates/blob/master/src/SinglePageApps/ReactApp/ReactApp/src/home/Hello.tsx) which displays a Welcome message on each key-press:
  
 ```ts
 import { client } from '../shared';
@@ -394,13 +394,13 @@ async nameChanged(name:string) {
 }
 ```
  
-The imported `client` is an instance of `JsonServiceClient` declared in [shared.ts](https://github.com/ServiceStack/Templates/blob/master/src/SinglePageApps/ReactApp1/ReactApp1/src/shared.tsx) module, configured with the BaseUrl at `/`:
+The imported `client` is an instance of `JsonServiceClient` declared in [shared.ts](https://github.com/ServiceStack/Templates/blob/master/src/SinglePageApps/ReactApp/ReactApp/src/shared.tsx) module, configured with the BaseUrl at `/`:
  
 ```ts
 export var client = new JsonServiceClient(global.BaseUrl || '/');
 ```
  
-The `global.BaseUrl` is defined in [package.json](https://github.com/ServiceStack/Templates/blob/a64897e8b20318ef4c00558fa9ccb5e1e0a157ee/src/SinglePageApps/ReactApp1/ReactApp1/package.json#L16) and injected by [Jest](https://facebook.github.io/jest/) in order to be able to run end-to-end Integration tests.
+The `global.BaseUrl` is defined in [package.json](https://github.com/ServiceStack/Templates/blob/9e5bd421decffda43fcc46f4cf112b3999888e53/src/SinglePageApps/ReactApp/ReactApp/package.json#L17) and injected by [Jest](https://facebook.github.io/jest/) in order to be able to run end-to-end Integration tests.
  
 #### Updating Server TypeScript DTOs
  
@@ -482,7 +482,7 @@ You'll be able to detect when it's finished by waiting for the original contents
 <!-- auto-generated by webpack -->
 ```
 
-to be replaced with a [Webpack generated html template](https://github.com/ServiceStack/Templates/blob/master/src/SinglePageApps/ReactApp1/ReactApp1/index.html).
+to be replaced with a [Webpack generated html template](https://github.com/ServiceStack/Templates/blob/master/src/SinglePageApps/ReactApp/ReactApp/index.html).
 
 ### Keep Desktop node and VS.NET in sync
  
