--- a/docs/_releases/v4.5.14.md
+++ b/docs/_releases/v4.5.14.md
@@ -168,7 +168,7 @@ easier to maintain by just adding an entry in the JavaScript object literal. The
 {{ { '/':         'Home',
      '/about':    'About',
      '/services': 'Services',
-     '/contact':  'Contact',
+     '/contact':  'Contact'
    } | toList | assignTo: links }}
 
 <div class="collapse navbar-collapse" id="navbarResponsive">
