--- a/docs/_releases/v4.5.14.md
+++ b/docs/_releases/v4.5.14.md
@@ -164,6 +164,18 @@ The benefits over using a static website is improved maintenance as you can extr
 [_layout.html](https://github.com/NetCoreWebApps/WebAppStarter/blob/master/app/_layout.html) instead of having it duplicated in each page. The [menu.html](https://github.com/NetCoreWebApps/WebAppStarter/blob/master/app/menu.html) partial also makes menu items
 easier to maintain by just adding an entry in the JavaScript object literal. The dynamic menu also takes care of highlighting the active menu item.
 
+    {{ { '/':         'Home',
+        '/about':    'About',
+        '/services': 'Services',
+        '/contact':  'Contact',
+    } | toList | assignTo: links }}
+
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+            {{ links | select: <li class="nav-item { 'active' | ifMatchesPathInfo(it.Key) }"><a class="nav-link" href="{ it.Key }">{ it.Value }</a></li> }}
+        </ul>
+    </div>
+
 #### Ideal for Web Designers and Content Authors
 
 The other primary benefit is that this is an example of a website that can be maintained by employees who don't have any programming experience as Templates in their basic form are intuitive and approachable to non-developers, e.g: The title of each page is maintained as metadata HTML comments:
@@ -241,24 +253,22 @@ The Rockwind website shows an example of combining multiple websites in a single
 
 [/northwind](https://github.com/NetCoreWebApps/Rockwind/tree/master/app/northwind) is an example of a dynamic UI for a database containing a [form to filter results](http://rockwind-sqlite.web-app.io/northwind/customers?country=Germany), multi-nested [detail pages](http://rockwind-sqlite.web-app.io/northwind/customer?id=ALFKI) and [deep-linking](http://rockwind-sqlite.web-app.io/northwind/order?id=10643) for quickly navigating between referenced data. Templates is also a great solution for rapidly developing Web APIs where the [/api/customers.html](https://github.com/NetCoreWebApps/Rockwind/blob/master/app/api/customers.html) API Page below:
 
-```js
-{{ limit | default(100) | assignTo: limit }}
+    {{ limit | default(100) | assignTo: limit }}
 
-{{ 'select Id, CompanyName, ContactName, ContactTitle, City, Country from Customer' | assignTo: sql }}
+    {{ 'select Id, CompanyName, ContactName, ContactTitle, City, Country from Customer' | assignTo: sql }}
 
-{{ PathArgs | endIfEmpty | useFmt('{0} where Id = @id', sql) 
-            | dbSingle({ id: PathArgs[0] }) 
-            | return }}
+    {{ PathArgs | endIfEmpty | useFmt('{0} where Id = @id', sql) 
+                | dbSingle({ id: PathArgs[0] }) 
+                | return }}
 
-{{ id       | endIfEmpty | use('Id = @id')           | addTo: filters }}
-{{ city     | endIfEmpty | use('City = @city')       | addTo: filters }}
-{{ country  | endIfEmpty | use('Country = @country') | addTo: filters }}
-{{ filters  | endIfEmpty | useFmt('{0} where {1}', sql, join(filters, ' and '))     | assignTo: sql }}
-{{ sql      | appendFmt(" ORDER BY CompanyName {0}", sqlLimit(limit))               | assignTo: sql }}
+    {{ id       | endIfEmpty | use('Id = @id')           | addTo: filters }}
+    {{ city     | endIfEmpty | use('City = @city')       | addTo: filters }}
+    {{ country  | endIfEmpty | use('Country = @country') | addTo: filters }}
+    {{ filters  | endIfEmpty | useFmt('{0} where {1}', sql, join(filters, ' and '))     | assignTo: sql }}
+    {{ sql      | appendFmt(" ORDER BY CompanyName {0}", sqlLimit(limit))               | assignTo: sql }}
 
-{{ sql      | dbSelect({ id, city, country }) 
-            | return }}
-```
+    {{ sql      | dbSelect({ id, city, country }) 
+                | return }}
 
 Contains all the code needed to generate the following API endpoints:
 
