try escaping using raw tags

--- a/docs/_releases/v4.5.14.md
+++ b/docs/_releases/v4.5.14.md
@@ -164,17 +164,21 @@ The benefits over using a static website is improved maintenance as you can extr
 [_layout.html](https://github.com/NetCoreWebApps/WebAppStarter/blob/master/app/_layout.html) instead of having it duplicated in each page. The [menu.html](https://github.com/NetCoreWebApps/WebAppStarter/blob/master/app/menu.html) partial also makes menu items
 easier to maintain by just adding an entry in the JavaScript object literal. The dynamic menu also takes care of highlighting the active menu item.
 
-    {{ { '/':         'Home',
-        '/about':    'About',
-        '/services': 'Services',
-        '/contact':  'Contact',
-    } | toList | assignTo: links }}
+```html
+{% raw %}
+{{ { '/':         'Home',
+     '/about':    'About',
+     '/services': 'Services',
+     '/contact':  'Contact'
+   } | toList | assignTo: links }}
 
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-            {{ links | select: <li class="nav-item { 'active' | ifMatchesPathInfo(it.Key) }"><a class="nav-link" href="{ it.Key }">{ it.Value }</a></li> }}
-        </ul>
-    </div>
+<div class="collapse navbar-collapse" id="navbarResponsive">
+    <ul class="navbar-nav ml-auto">
+        {{ links | select: <li class="nav-item { 'active' | ifMatchesPathInfo(it.Key) }"><a class="nav-link" href="{ it.Key }">{ it.Value }</a></li> }}
+    </ul>
+</div>
+{% endraw %}
+```
 
 #### Ideal for Web Designers and Content Authors
 
@@ -253,22 +257,26 @@ The Rockwind website shows an example of combining multiple websites in a single
 
 [/northwind](https://github.com/NetCoreWebApps/Rockwind/tree/master/app/northwind) is an example of a dynamic UI for a database containing a [form to filter results](http://rockwind-sqlite.web-app.io/northwind/customers?country=Germany), multi-nested [detail pages](http://rockwind-sqlite.web-app.io/northwind/customer?id=ALFKI) and [deep-linking](http://rockwind-sqlite.web-app.io/northwind/order?id=10643) for quickly navigating between referenced data. Templates is also a great solution for rapidly developing Web APIs where the [/api/customers.html](https://github.com/NetCoreWebApps/Rockwind/blob/master/app/api/customers.html) API Page below:
 
-    {{ limit | default(100) | assignTo: limit }}
+```js
+{% raw  %}
+{{ limit | default(100) | assignTo: limit }}
 
-    {{ 'select Id, CompanyName, ContactName, ContactTitle, City, Country from Customer' | assignTo: sql }}
+{{ 'select Id, CompanyName, ContactName, ContactTitle, City, Country from Customer' | assignTo: sql }}
 
-    {{ PathArgs | endIfEmpty | useFmt('{0} where Id = @id', sql) 
-                | dbSingle({ id: PathArgs[0] }) 
-                | return }}
+{{ PathArgs | endIfEmpty | useFmt('{0} where Id = @id', sql) 
+            | dbSingle({ id: PathArgs[0] }) 
+            | return }}
 
-    {{ id       | endIfEmpty | use('Id = @id')           | addTo: filters }}
-    {{ city     | endIfEmpty | use('City = @city')       | addTo: filters }}
-    {{ country  | endIfEmpty | use('Country = @country') | addTo: filters }}
-    {{ filters  | endIfEmpty | useFmt('{0} where {1}', sql, join(filters, ' and '))     | assignTo: sql }}
-    {{ sql      | appendFmt(" ORDER BY CompanyName {0}", sqlLimit(limit))               | assignTo: sql }}
+{{ id       | endIfEmpty | use('Id = @id')           | addTo: filters }}
+{{ city     | endIfEmpty | use('City = @city')       | addTo: filters }}
+{{ country  | endIfEmpty | use('Country = @country') | addTo: filters }}
+{{ filters  | endIfEmpty | useFmt('{0} where {1}', sql, join(filters, ' and '))     | assignTo: sql }}
+{{ sql      | appendFmt(" ORDER BY CompanyName {0}", sqlLimit(limit))               | assignTo: sql }}
 
-    {{ sql      | dbSelect({ id, city, country }) 
-                | return }}
+{{ sql      | dbSelect({ id, city, country }) 
+            | return }}
+{% endraw %}
+```
 
 Contains all the code needed to generate the following API endpoints:
 
@@ -361,6 +369,7 @@ the same configuration in [web.azure.settings](https://github.com/NetCoreWebApps
 As Templates is unable to use a Typed ORM like [OrmLite](https://github.com/ServiceStack/ServiceStack.OrmLite) to hide the nuances of each database, we need to be more diligent when creating parameterized SQL that works across multiple databases by using the [`sql*` DB Filters](http://templates.servicestack.net/docs/filters-reference?nameContains=sql&amp;tab=db-filters) to avoid using RDBMS-specific SQL syntax. The [/northwind/customer.html](https://github.com/NetCoreWebApps/Rockwind/blob/master/app/northwind/customer.html) contains a good example containing a number of things to watch out for:
 
 ```js
+{% raw %}
 {{ id | endIfEmpty | useFmt(
     `select o.Id, 
            {0} Employee, 
@@ -377,6 +386,7 @@ As Templates is unable to use a Typed ORM like [OrmLite](https://github.com/Serv
      sqlCurrency("sum((d.Unitprice * d.Quantity) - d.discount)"), 
      sqlQuote("Order"))
    | dbSelect({ id }) | assignTo: orders }}
+{% endraw %}
 ```
 
 Use `sqlConcat` to concatenate strings using the RDBMS-specific SQL for the configured database. Likewise `sqlCurrency` utilizes RDBMS-specific SQL functions to return monetary values in a currency format, whilst `sqlQuote` is used for quoting tables and columns named after a reserved word.
