--- a/docs/_releases/v4.5.14.md
+++ b/docs/_releases/v4.5.14.md
@@ -402,7 +402,9 @@ Use `sqlConcat` to concatenate strings using the RDBMS-specific SQL for the conf
 To maximize responsiveness when using remote storage, all [embedded files also utilize caching](https://github.com/NetCoreWebApps/WebApp/blob/master/src/apps/rockwind-vfs/rockstars/alive/grohl/index.html):
 
 ```js
+{% raw %}
 {{ "content.md" | includeFileWithCache | markdown }}
+{% endraw %}
 ```
 
 The other difference is that each table and column has been quoted in "double-quotes" so that it works in PostgreSQL which otherwise treats unquoted symbols as lowercase. This version of Rockwind also works using SQL Server and SQLite as they also support `"Table"` quotes but not MySql which uses `Back Ticks` or `[SquareBrackets]`. These differences makes it infeasible to develop Web Apps that support both PostgreSQL and MySql unless you're willing to use all **lowercase**, **snake_case** or the `sqlQuote` filter for every table and column.
@@ -414,9 +416,11 @@ The other difference is that each table and column has been quoted in "double-qu
 When using a remote file storage like AWS S3 or Azure Blob Storage it's a good idea to use the `resolveAsset` filter for each external file reference. By default it returns the same path it was called with so it will continue to work locally but then ServiceStack effectively becomes a proxy where it calls the remote Storage Service for each requested download.
 
 ```html
+{% raw %}
 <link rel="stylesheet" href="{{ 'assets/css/bootstrap.css' | resolveAsset }}" />
 
 <img src="{{ 'splash.jpg' | resolveAsset }}" id="splash" alt="Dave Grohl" />
+{% endraw %}
 ```
 
 ServiceStack asynchronously writes each file to the Response Stream with the last `Last-Modified` HTTP Header to enable browser caching so it's still a workable solution but for optimal performance you can specify `args.assetsBase` in your web.settings to populate the assetsBase `TemplateContext` Argument the `resolveAsset` filter uses to generate an external URL reference to the remote file, reducing the load and improving the performance of your App, especially when configured to use a CDN.
