--- a/docs/_releases/v4.5.14.md
+++ b/docs/_releases/v4.5.14.md
@@ -165,8 +165,7 @@ The benefits over using a static website is improved maintenance as you can extr
 easier to maintain by just adding an entry in the JavaScript object literal. The dynamic menu also takes care of highlighting the active menu item.
 
 ```html
-{% raw %}
-{{ { '/':         'Home',
+{% raw %}{{ { '/':         'Home',
      '/about':    'About',
      '/services': 'Services',
      '/contact':  'Contact'
@@ -176,8 +175,7 @@ easier to maintain by just adding an entry in the JavaScript object literal. The
     <ul class="navbar-nav ml-auto">
         {{ links | select: <li class="nav-item { 'active' | ifMatchesPathInfo(it.Key) }"><a class="nav-link" href="{ it.Key }">{ it.Value }</a></li> }}
     </ul>
-</div>
-{% endraw %}
+</div>{% endraw %}
 ```
 
 #### Ideal for Web Designers and Content Authors
@@ -369,8 +367,7 @@ the same configuration in [web.azure.settings](https://github.com/NetCoreWebApps
 As Templates is unable to use a Typed ORM like [OrmLite](https://github.com/ServiceStack/ServiceStack.OrmLite) to hide the nuances of each database, we need to be more diligent when creating parameterized SQL that works across multiple databases by using the [`sql*` DB Filters](http://templates.servicestack.net/docs/filters-reference?nameContains=sql&amp;tab=db-filters) to avoid using RDBMS-specific SQL syntax. The [/northwind/customer.html](https://github.com/NetCoreWebApps/Rockwind/blob/master/app/northwind/customer.html) contains a good example containing a number of things to watch out for:
 
 ```js
-{% raw %}
-{{ id | endIfEmpty | useFmt(
+{% raw %}{{ id | endIfEmpty | useFmt(
     `select o.Id, 
            {0} Employee, 
            OrderDate, ShipCountry, ShippedDate, 
@@ -385,8 +382,7 @@ As Templates is unable to use a Typed ORM like [OrmLite](https://github.com/Serv
      sqlConcat(["e.FirstName", "' '", "e.LastName"]), 
      sqlCurrency("sum((d.Unitprice * d.Quantity) - d.discount)"), 
      sqlQuote("Order"))
-   | dbSelect({ id }) | assignTo: orders }}
-{% endraw %}
+   | dbSelect({ id }) | assignTo: orders }}{% endraw %}
 ```
 
 Use `sqlConcat` to concatenate strings using the RDBMS-specific SQL for the configured database. Likewise `sqlCurrency` utilizes RDBMS-specific SQL functions to return monetary values in a currency format, whilst `sqlQuote` is used for quoting tables and columns named after a reserved word.
@@ -402,9 +398,7 @@ Use `sqlConcat` to concatenate strings using the RDBMS-specific SQL for the conf
 To maximize responsiveness when using remote storage, all [embedded files also utilize caching](https://github.com/NetCoreWebApps/WebApp/blob/master/src/apps/rockwind-vfs/rockstars/alive/grohl/index.html):
 
 ```js
-{% raw %}
-{{ "content.md" | includeFileWithCache | markdown }}
-{% endraw %}
+{% raw %}{{ "content.md" | includeFileWithCache | markdown }}{% endraw %}
 ```
 
 The other difference is that each table and column has been quoted in "double-quotes" so that it works in PostgreSQL which otherwise treats unquoted symbols as lowercase. This version of Rockwind also works using SQL Server and SQLite as they also support `"Table"` quotes but not MySql which uses `Back Ticks` or `[SquareBrackets]`. These differences makes it infeasible to develop Web Apps that support both PostgreSQL and MySql unless you're willing to use all **lowercase**, **snake_case** or the `sqlQuote` filter for every table and column.
@@ -416,11 +410,9 @@ The other difference is that each table and column has been quoted in "double-qu
 When using a remote file storage like AWS S3 or Azure Blob Storage it's a good idea to use the `resolveAsset` filter for each external file reference. By default it returns the same path it was called with so it will continue to work locally but then ServiceStack effectively becomes a proxy where it calls the remote Storage Service for each requested download.
 
 ```html
-{% raw %}
-<link rel="stylesheet" href="{{ 'assets/css/bootstrap.css' | resolveAsset }}" />
+{% raw %}<link rel="stylesheet" href="{{ 'assets/css/bootstrap.css' | resolveAsset }}" />
 
-<img src="{{ 'splash.jpg' | resolveAsset }}" id="splash" alt="Dave Grohl" />
-{% endraw %}
+<img src="{{ 'splash.jpg' | resolveAsset }}" id="splash" alt="Dave Grohl" />{% endraw %}
 ```
 
 ServiceStack asynchronously writes each file to the Response Stream with the last `Last-Modified` HTTP Header to enable browser caching so it's still a workable solution but for optimal performance you can specify `args.assetsBase` in your web.settings to populate the assetsBase `TemplateContext` Argument the `resolveAsset` filter uses to generate an external URL reference to the remote file, reducing the load and improving the performance of your App, especially when configured to use a CDN.
